--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
         max-height: 4rem;
       }
       body {
-        background: #000;
+        /* Approximate Tailwind gradient */
+        background: linear-gradient(
+          to bottom right,
+          #0f172a,
+          #1e293b,
+          #0f172a
+        ) !important;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 3rem;
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        margin: 0;
       }
     </style>
 
@@ -25,9 +41,11 @@
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   </head>
 
-  <body
-    class="h-full flex items-center justify-center relative overflow-hidden"
-  >
+  <body>
+    <div
+      class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
+    />
+
     <div
       id="branchLabel"
       class="fixed top-4 right-4 text-white font-bold text-center bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
@@ -197,13 +215,7 @@
         socket.on("table:update", (data) => {
           console.log("📡 Live update:", data);
           if (data._id === tableId) {
-            data.currencies.forEach((cur) => {
-              const row = document.querySelector(`tr[data-code="${cur.code}"]`);
-              if (!row) return;
-              row.querySelector(".buy").textContent = cur.buyRate;
-              row.querySelector(".sell").textContent = cur.sellRate;
-              row.querySelector(".notable").textContent = cur.notableRate;
-            });
+            render(data);
           }
         });
 
