--- a/index.html
+++ b/index.html
@@ -35,194 +35,220 @@
         position: relative;
         margin: 0;
       }
+
+      .rotate-page {
+        transform: rotate(90deg);
+        transform-origin: center center;
+        width: 100vh;
+        height: 100vw;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .wrapper {
+        position: absolute;
+        top: -100vw;
+        left: 0;
+        width: 100vh;
+        height: 100vw;
+        transform: rotate(90deg);
+        transform-origin: bottom left;
+      }
     </style>
 
     <!-- Socket.IO CDN -->
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   </head>
 
-  <body>
-    <div
-      class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
-    />
-
-    <div
-      id="branchLabel"
-      class="fixed top-4 right-4 text-white font-bold text-center bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
-    >
-      Loading…
-    </div>
-
-    <div
-      class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-center p-12 w-full h-full relative"
-    >
+  <div class="wrapper">
+    <body>
       <div
         class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
-      ></div>
+      />
 
-      <h1
-        class="text-6xl lg:text-7xl font-bold mb-8 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl relative z-10 text-center"
+      <div
+        id="branchLabel"
+        class="fixed top-4 right-4 text-white font-bold text-center bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
       >
-        Exmony
-      </h1>
-
-      <div class="w-full max-w-7xl relative z-10">
-        <div
-          class="bg-gradient-to-r from-slate-800/50 via-slate-700/50 to-slate-800/50 backdrop-blur-xl border border-slate-500/30 rounded-3xl overflow-hidden shadow-2xl shadow-black/20"
-        >
-          <table class="w-full text-left table-auto" id="ratesTable">
-            <thead
-              class="bg-gradient-to-r from-gray-600/20 via-slate-600/20 to-gray-600/20 text-slate-200 border-b border-slate-400/30"
-            >
-              <tr>
-                <th
-                  class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                >
-                  Currency
-                </th>
-                <th
-                  class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                >
-                  Buy
-                </th>
-                <th
-                  class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                >
-                  Sell
-                </th>
-                <th
-                  class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                >
-                  Notable Price
-                </th>
-              </tr>
-            </thead>
-            <tbody id="ratesBody" class="divide-y divide-slate-700/50"></tbody>
-          </table>
-        </div>
-        <div
-          class="absolute -top-6 -left-8 w-40 h-40 bg-gradient-to-r from-gray-600 to-slate-700 rounded-full blur-xl opacity-20 animate-pulse"
-        ></div>
-        <div
-          class="absolute -bottom-8 -right-8 w-48 h-48 bg-gradient-to-r from-gray-500 to-slate-600 rounded-full blur-xl opacity-20 animate-pulse delay-1000"
-        ></div>
+        Loading…
       </div>
-    </div>
 
-    <script>
-      const API_URL = "https://api.exmony.ge/rate-tables?name=kobaladze";
-      const WS_URL = "https://api.exmony.ge"; // base URL for Socket.IO
-      let tableId = null;
+      <div
+        class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-center p-12 w-full h-full relative"
+      >
+        <div
+          class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
+        ></div>
 
-      function createCell(txt, extraCls) {
-        const td = document.createElement("td");
-        td.className = "p-2 text-center " + (extraCls || "");
-        td.textContent = txt;
-        return td;
-      }
+        <h1
+          class="text-6xl lg:text-7xl font-bold mb-8 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl relative z-10 text-center"
+        >
+          Exmony
+        </h1>
 
-      function render(table) {
-        document.getElementById("branchLabel").textContent =
-          (table.name || "Unknown") + " Branch";
-        const tbody = document.getElementById("ratesBody");
-        tbody.innerHTML = "";
+        <div class="w-full max-w-7xl relative z-10">
+          <div
+            class="bg-gradient-to-r from-slate-800/50 via-slate-700/50 to-slate-800/50 backdrop-blur-xl border border-slate-500/30 rounded-3xl overflow-hidden shadow-2xl shadow-black/20"
+          >
+            <table class="w-full text-left table-auto" id="ratesTable">
+              <thead
+                class="bg-gradient-to-r from-gray-600/20 via-slate-600/20 to-gray-600/20 text-slate-200 border-b border-slate-400/30"
+              >
+                <tr>
+                  <th
+                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                  >
+                    Currency
+                  </th>
+                  <th
+                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                  >
+                    Buy
+                  </th>
+                  <th
+                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                  >
+                    Sell
+                  </th>
+                  <th
+                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                  >
+                    Notable Price
+                  </th>
+                </tr>
+              </thead>
+              <tbody
+                id="ratesBody"
+                class="divide-y divide-slate-700/50"
+              ></tbody>
+            </table>
+          </div>
+          <div
+            class="absolute -top-6 -left-8 w-40 h-40 bg-gradient-to-r from-gray-600 to-slate-700 rounded-full blur-xl opacity-20 animate-pulse"
+          ></div>
+          <div
+            class="absolute -bottom-8 -right-8 w-48 h-48 bg-gradient-to-r from-gray-500 to-slate-600 rounded-full blur-xl opacity-20 animate-pulse delay-1000"
+          ></div>
+        </div>
+      </div>
 
-        (table.currencies || []).forEach((cur) => {
-          const tr = document.createElement("tr");
-          tr.setAttribute("data-code", cur.code);
-          tr.className =
-            "hover:bg-gradient-to-r hover:from-slate-800/20 hover:via-slate-700/20 hover:to-slate-800/20 transition-all duration-300 group";
+      <script>
+        const API_URL = "https://api.exmony.ge/rate-tables?name=kobaladze";
+        const WS_URL = "https://api.exmony.ge"; // base URL for Socket.IO
+        let tableId = null;
 
-          const td0 = document.createElement("td");
-          td0.className =
-            "flex items-center text-center justify-center gap-2 p-2";
+        function createCell(txt, extraCls) {
+          const td = document.createElement("td");
+          td.className = "p-2 text-center " + (extraCls || "");
+          td.textContent = txt;
+          return td;
+        }
 
-          if (cur.image) {
-            const imgWrap = document.createElement("div");
-            imgWrap.className = "relative";
-            const img = new Image();
-            img.src = cur.image;
-            img.alt = cur.label;
-            img.width = 64;
-            img.height = 64;
-            img.className = "object-cover transition-all duration-300";
-            imgWrap.appendChild(img);
+        function render(table) {
+          document.getElementById("branchLabel").textContent =
+            (table.name || "Unknown") + " Branch";
+          const tbody = document.getElementById("ratesBody");
+          tbody.innerHTML = "";
 
-            const overlay = document.createElement("div");
-            overlay.className =
-              "absolute inset-0 rounded-lg bg-gradient-to-tr from-slate-300/20 to-slate-400/20 group-hover:from-slate-300/40 group-hover:to-slate-400/40 transition-all duration-300";
-            imgWrap.appendChild(overlay);
+          (table.currencies || []).forEach((cur) => {
+            const tr = document.createElement("tr");
+            tr.setAttribute("data-code", cur.code);
+            tr.className =
+              "hover:bg-gradient-to-r hover:from-slate-800/20 hover:via-slate-700/20 hover:to-slate-800/20 transition-all duration-300 group";
 
-            td0.appendChild(imgWrap);
-          }
+            const td0 = document.createElement("td");
+            td0.className =
+              "flex items-center text-center justify-center gap-4 p-2";
 
-          const span = document.createElement("span");
-          span.className =
-            "font-mono font-bold text-xl lg:text-2xl text-slate-300 group-hover:text-slate-200 transition-colors duration-300";
-          span.textContent = cur.code;
-          td0.appendChild(span);
-          tr.appendChild(td0);
+            if (cur.image) {
+              const imgWrap = document.createElement("div");
+              imgWrap.className = "relative";
+              const img = new Image();
+              img.src = cur.image;
+              img.alt = cur.label;
+              img.width = 64;
+              img.height = 64;
+              img.className = "object-cover transition-all duration-300";
+              imgWrap.appendChild(img);
 
-          tr.appendChild(
-            createCell(
-              cur.buyRate,
-              "buy text-green-400 font-bold text-lg lg:text-xl"
-            )
-          );
-          tr.appendChild(
-            createCell(
-              cur.sellRate,
-              "sell text-yellow-400 font-bold text-lg lg:text-xl"
-            )
-          );
-          tr.appendChild(
-            createCell(
-              cur.notableRate,
-              "notable text-blue-400 font-bold text-lg lg:text-xl"
-            )
-          );
+              const overlay = document.createElement("div");
+              overlay.className =
+                "absolute inset-0 rounded-lg bg-gradient-to-tr from-slate-300/20 to-slate-400/20 group-hover:from-slate-300/40 group-hover:to-slate-400/40 transition-all duration-300";
+              imgWrap.appendChild(overlay);
 
-          tbody.appendChild(tr);
-        });
-      }
+              td0.appendChild(imgWrap);
+            }
 
-      // Initial fetch
-      fetch(API_URL)
-        .then((res) => res.json())
-        .then((data) => {
-          if (!data || !data.length) throw new Error("No data received.");
-          const table = data[0];
-          tableId = table._id;
-          render(table);
-          initSocket(tableId);
-        })
-        .catch((err) => {
-          console.error("Initial fetch failed:", err);
-        });
+            const span = document.createElement("span");
+            span.className =
+              "font-mono font-bold text-xl lg:text-2xl text-slate-300 group-hover:text-slate-200 transition-colors duration-300";
+            span.textContent = cur.code;
+            td0.appendChild(span);
+            tr.appendChild(td0);
 
-      // Live updates via socket.io
-      function initSocket(tableId) {
-        const socket = io(WS_URL, {
-          transports: ["websocket"],
-          withCredentials: true,
-        });
+            tr.appendChild(
+              createCell(
+                cur.buyRate,
+                "buy text-green-400 font-bold text-lg lg:text-xl"
+              )
+            );
+            tr.appendChild(
+              createCell(
+                cur.sellRate,
+                "sell text-yellow-400 font-bold text-lg lg:text-xl"
+              )
+            );
+            tr.appendChild(
+              createCell(
+                cur.notableRate,
+                "notable text-blue-400 font-bold text-lg lg:text-xl"
+              )
+            );
 
-        socket.on("connect", () => {
-          console.log("✅ Socket connected:", socket.id);
-          socket.emit("joinRoom", tableId);
-        });
+            tbody.appendChild(tr);
+          });
+        }
 
-        socket.on("table:update", (data) => {
-          console.log("📡 Live update:", data);
-          if (data._id === tableId) {
-            render(data);
-          }
-        });
+        // Initial fetch
+        fetch(API_URL)
+          .then((res) => res.json())
+          .then((data) => {
+            if (!data || !data.length) throw new Error("No data received.");
+            const table = data[0];
+            tableId = table._id;
+            render(table);
+            initSocket(tableId);
+          })
+          .catch((err) => {
+            console.error("Initial fetch failed:", err);
+          });
 
-        socket.on("disconnect", () => {
-          console.warn("⚠️ Socket disconnected");
-        });
-      }
-    </script>
-  </body>
+        // Live updates via socket.io
+        function initSocket(tableId) {
+          const socket = io(WS_URL, {
+            transports: ["websocket"],
+            withCredentials: true,
+          });
+
+          socket.on("connect", () => {
+            console.log("✅ Socket connected:", socket.id);
+            socket.emit("joinRoom", tableId);
+          });
+
+          socket.on("table:update", (data) => {
+            console.log("📡 Live update:", data);
+            if (data._id === tableId) {
+              render(data);
+            }
+          });
+
+          socket.on("disconnect", () => {
+            console.warn("⚠️ Socket disconnected");
+          });
+        }
+      </script>
+    </body>
+  </div>
 </html>
