--- a/index.html
+++ b/index.html
@@ -4,38 +4,25 @@
     <meta charset="utf-8" />
     <title>Exmony Rates</title>
 
-    <!-- Tailwind via CDN -->
+    <!-- Tailwind (old 2.x for TV-friendly CDN) -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <!-- Image styling + dark background -->
+    <!-- Lucide icons -->
+    <script src="https://unpkg.com/lucide@latest"></script>
+
+    <!-- Socket.IO -->
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+
     <style>
       img {
         max-width: 4rem;
         max-height: 4rem;
       }
-      body {
-        /* Approximate Tailwind gradient */
-        background: linear-gradient(
-          to bottom right,
-          #0f172a,
-          #1e293b,
-          #0f172a
-        ) !important;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 3rem;
-        width: 100%;
-        height: 100vh;
-        position: relative;
-        margin: 0;
-      }
-
+      /* -------- rotation stuff (unchanged) -------- */
       .rotate-page {
         transform: rotate(90deg);
         transform-origin: center center;
@@ -46,7 +33,6 @@
         top: 0;
         left: 0;
       }
-
       .wrapper {
         position: absolute;
         top: -100vw;
@@ -56,198 +42,236 @@
         transform: rotate(90deg);
         transform-origin: bottom left;
       }
-    </style>
 
-    <!-- Socket.IO CDN -->
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+      body {
+        background-color: #0f172a; /* Tailwind's slate-900 */
+        color: white;
+        margin: 0;
+        padding: 2rem;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
 
+  <!-- ----------  ROTATED LAYOUT ---------- -->
   <div class="wrapper">
-    <body>
+    <body class="bg-slate-900">
+      <!-- tiny film-grain overlay -->
       <div
         class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
-      />
+      ></div>
 
+      <!-- pulsing background blobs -->
       <div
-        id="branchLabel"
-        class="fixed top-4 right-4 text-white font-bold text-center bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
-      >
-        Loading…
-      </div>
-
+        class="absolute top-1/4 left-1/4 w-96 h-96 bg-blue-500/10 rounded-full blur-3xl animate-pulse"
+      ></div>
       <div
-        class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-center p-12 w-full h-full relative"
-      >
-        <div
-          class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
-        ></div>
+        class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-purple-500/10 rounded-full blur-3xl animate-pulse delay-1000"
+      ></div>
+      <div
+        class="absolute top-3/4 left-1/2 w-64 h-64 bg-emerald-500/10 rounded-full blur-3xl animate-pulse delay-2000"
+      ></div>
 
-        <h1
-          class="text-6xl lg:text-7xl font-bold mb-8 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl relative z-10 text-center"
-        >
-          Exmony
-        </h1>
-
-        <div class="w-full max-w-7xl relative z-10">
-          <div
-            class="bg-gradient-to-r from-slate-800/50 via-slate-700/50 to-slate-800/50 backdrop-blur-xl border border-slate-500/30 rounded-3xl overflow-hidden shadow-2xl shadow-black/20"
+      <!-- --------------- HEADER ---------------- -->
+      <header class="text-center mb-12 relative z-10">
+        <div class="inline-flex items-center gap-3 mb-4">
+          <i data-lucide="dollar-sign" class="w-12 h-12 text-blue-400"></i>
+          <h1
+            class="text-6xl lg:text-7xl font-bold bg-gradient-to-r from-blue-400 via-purple-400 to-emerald-400 bg-clip-text text-transparent"
           >
-            <table class="w-full text-left table-auto" id="ratesTable">
-              <thead
-                class="bg-gradient-to-r from-gray-600/20 via-slate-600/20 to-gray-600/20 text-slate-200 border-b border-slate-400/30"
-              >
-                <tr>
-                  <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                  >
-                    Currency
-                  </th>
-                  <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                  >
-                    Buy
-                  </th>
-                  <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                  >
-                    Sell
-                  </th>
-                  <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
-                  >
-                    Notable Price
-                  </th>
-                </tr>
-              </thead>
-              <tbody
-                id="ratesBody"
-                class="divide-y divide-slate-700/50"
-              ></tbody>
-            </table>
-          </div>
-          <div
-            class="absolute -top-6 -left-8 w-40 h-40 bg-gradient-to-r from-gray-600 to-slate-700 rounded-full blur-xl opacity-20 animate-pulse"
-          ></div>
-          <div
-            class="absolute -bottom-8 -right-8 w-48 h-48 bg-gradient-to-r from-gray-500 to-slate-600 rounded-full blur-xl opacity-20 animate-pulse delay-1000"
-          ></div>
+            Exmony
+          </h1>
         </div>
-      </div>
 
+        <p class="text-xl text-slate-300 mb-2">
+          Real-time Currency Exchange Rates
+        </p>
+
+        <div class="flex items-center justify-center gap-2 text-slate-400">
+          <span id="branchLabel">Loading…</span>
+          <span>•</span>
+          Last&nbsp;updated:
+          <span id="lastUpdatedLabel">--:--:--</span>
+        </div>
+      </header>
+
+      <!-- --------------- TABLE ----------------- -->
+      <main class="w-full max-w-7xl relative z-10 p-6">
+        <div
+          class="bg-slate-900/50 backdrop-blur-xl border border-slate-700/50 rounded-3xl overflow-hidden shadow-2xl shadow-black/20"
+        >
+          <table id="ratesTable" class="w-full">
+            <thead>
+              <tr
+                class="border-b border-slate-700/50 bg-slate-800/30 text-slate-300"
+              >
+                <th class="text-left p-2 font-semibold text-lg">Currency</th>
+                <th class="text-center p-2 font-semibold text-lg">
+                  <div class="flex items-center justify-center gap-2">
+                    <i
+                      data-lucide="trending-up"
+                      class="w-5 h-5 text-emerald-400"
+                    ></i>
+                    Buy&nbsp;Rate
+                  </div>
+                </th>
+                <th class="text-center p-2 font-semibold text-lg">
+                  <div class="flex items-center justify-center gap-2">
+                    <i
+                      data-lucide="trending-down"
+                      class="w-5 h-5 text-red-400"
+                    ></i>
+                    Sell&nbsp;Rate
+                  </div>
+                </th>
+                <th class="text-center p-2 font-semibold text-lg">
+                  Notable&nbsp;Rate
+                </th>
+              </tr>
+            </thead>
+            <tbody id="ratesBody" class="divide-y divide-slate-700/50"></tbody>
+          </table>
+        </div>
+
+        <!-- small soft-blur extras -->
+        <div
+          class="absolute -top-2 -left-8 w-40 h-40 bg-gradient-to-r from-gray-600 to-slate-700 rounded-full blur-xl opacity-20 animate-pulse"
+        ></div>
+        <div
+          class="absolute -bottom-8 -right-8 w-48 h-48 bg-gradient-to-r from-gray-500 to-slate-600 rounded-full blur-xl opacity-20 animate-pulse delay-1000"
+        ></div>
+      </main>
+
+      <!-- --------------- FOOTER ---------------- -->
+      <footer class="text-center mt-8 text-slate-400 relative z-10">
+        <p class="text-sm">
+          Rates are updated in real-time • Data provided by Exmony&nbsp;API
+        </p>
+      </footer>
+
+      <!-- ========= JS (fetch + socket + render) ========= -->
       <script>
         const API_URL = "https://api.exmony.ge/rate-tables?name=kobaladze";
-        const WS_URL = "https://api.exmony.ge"; // base URL for Socket.IO
+        const WS_URL = "https://api.exmony.ge";
         let tableId = null;
 
-        function createCell(txt, extraCls) {
+        const $lastUpdated = document.getElementById("lastUpdatedLabel");
+        const $branchLabel = document.getElementById("branchLabel");
+        const $tbody = document.getElementById("ratesBody");
+
+        /* utility */
+        const createCell = (txt, cls) => {
           const td = document.createElement("td");
-          td.className = "p-2 text-center " + (extraCls || "");
           td.textContent = txt;
+          td.className = `p-2 text-center ${cls}`;
           return td;
-        }
+        };
+        const fmtTime = (d) =>
+          d.toLocaleTimeString("en-US", {
+            hour: "2-digit",
+            minute: "2-digit",
+            second: "2-digit",
+          });
 
+        /* main render */
         function render(table) {
-          document.getElementById("branchLabel").textContent =
-            (table.name || "Unknown") + " Branch";
-          const tbody = document.getElementById("ratesBody");
-          tbody.innerHTML = "";
+          $branchLabel.textContent = `${table.name} Branch`;
+          $lastUpdated.textContent = fmtTime(new Date());
+          $tbody.innerHTML = "";
 
-          (table.currencies || []).forEach((cur) => {
+          table.currencies.forEach((c, idx) => {
             const tr = document.createElement("tr");
-            tr.setAttribute("data-code", cur.code);
             tr.className =
-              "hover:bg-gradient-to-r hover:from-slate-800/20 hover:via-slate-700/20 hover:to-slate-800/20 transition-all duration-300 group";
+              "border-b border-slate-700/30 hover:bg-slate-800/30 transition-all duration-300 group";
+            tr.style.animationDelay = `${idx * 100}ms`;
 
+            /* currency cell with image */
             const td0 = document.createElement("td");
-            td0.className =
-              "flex items-center text-center justify-center gap-4 p-2";
+            td0.className = "p-2";
+            const wrap = document.createElement("div");
+            wrap.className = "flex items-center gap-2";
+            const imgBox = document.createElement("div");
+            imgBox.className =
+              "relative w-16 h-16 rounded-full bg-gradient-to-br from-slate-700 to-slate-800 flex items-center justify-center overflow-hidden";
 
-            if (cur.image) {
-              const imgWrap = document.createElement("div");
-              imgWrap.className = "relative";
+            if (c.image) {
               const img = new Image();
-              img.src = cur.image;
-              img.alt = cur.label;
-              img.width = 64;
-              img.height = 64;
-              img.className = "object-cover transition-all duration-300";
-              imgWrap.appendChild(img);
-
-              const overlay = document.createElement("div");
-              overlay.className =
-                "absolute inset-0 rounded-lg bg-gradient-to-tr from-slate-300/20 to-slate-400/20 group-hover:from-slate-300/40 group-hover:to-slate-400/40 transition-all duration-300";
-              imgWrap.appendChild(overlay);
-
-              td0.appendChild(imgWrap);
+              img.src = c.image;
+              img.alt = c.label;
+              img.className = "w-12 h-12 object-cover rounded-full";
+              imgBox.appendChild(img);
+            } else {
+              imgBox.textContent = c.code.slice(0, 2);
+              imgBox.classList.add("font-bold", "text-xl", "text-slate-300");
             }
 
-            const span = document.createElement("span");
-            span.className =
-              "font-mono font-bold text-xl lg:text-2xl text-slate-300 group-hover:text-slate-200 transition-colors duration-300";
-            span.textContent = cur.code;
-            td0.appendChild(span);
+            const overlay = document.createElement("div");
+            overlay.className =
+              "absolute inset-0 rounded-full bg-gradient-to-tr from-blue-400/20 to-purple-400/20 group-hover:from-blue-400/40 group-hover:to-purple-400/40 transition-all duration-300";
+            imgBox.appendChild(overlay);
+
+            const labelBox = document.createElement("div");
+            labelBox.innerHTML = `<div class="text-xl font-bold text-white group-hover:text-blue-300 transition-colors">${c.code}</div><div class="text-sm text-slate-400">${c.label}</div>`;
+
+            wrap.append(imgBox, labelBox);
+            td0.appendChild(wrap);
             tr.appendChild(td0);
 
-            tr.appendChild(
+            /* numeric cells */
+            tr.append(
               createCell(
-                cur.buyRate,
-                "buy text-green-400 font-bold text-lg lg:text-xl"
-              )
-            );
-            tr.appendChild(
+                c.buyRate,
+                "text-emerald-400 font-bold text-2xl font-mono"
+              ),
               createCell(
-                cur.sellRate,
-                "sell text-yellow-400 font-bold text-lg lg:text-xl"
-              )
-            );
-            tr.appendChild(
+                c.sellRate,
+                "text-red-400 font-bold text-2xl font-mono"
+              ),
               createCell(
-                cur.notableRate,
-                "notable text-blue-400 font-bold text-lg lg:text-xl"
+                c.notableRate,
+                "text-blue-400 font-bold text-2xl font-mono"
               )
             );
 
-            tbody.appendChild(tr);
+            $tbody.appendChild(tr);
           });
+
+          lucide.createIcons(); // (re)render icons
+          document.getElementById("loadingOverlay").style.display = "none";
         }
 
-        // Initial fetch
+        /* initial fetch */
         fetch(API_URL)
-          .then((res) => res.json())
-          .then((data) => {
-            if (!data || !data.length) throw new Error("No data received.");
-            const table = data[0];
+          .then((r) => r.json())
+          .then((arr) => {
+            const table = arr[0];
             tableId = table._id;
             render(table);
             initSocket(tableId);
           })
           .catch((err) => {
             console.error("Initial fetch failed:", err);
+            document.getElementById("loadingOverlay").children[2].textContent =
+              "Failed to load data.";
           });
 
-        // Live updates via socket.io
-        function initSocket(tableId) {
+        /* live updates */
+        function initSocket(id) {
           const socket = io(WS_URL, {
             transports: ["websocket"],
             withCredentials: true,
           });
-
           socket.on("connect", () => {
-            console.log("✅ Socket connected:", socket.id);
-            socket.emit("joinRoom", tableId);
+            console.log("✅ socket connected", socket.id);
+            socket.emit("joinRoom", id);
           });
-
-          socket.on("table:update", (data) => {
-            console.log("📡 Live update:", data);
-            if (data._id === tableId) {
-              render(data);
-            }
-          });
-
-          socket.on("disconnect", () => {
-            console.warn("⚠️ Socket disconnected");
-          });
+          socket.on("table:update", (t) => t._id === id && render(t));
+          socket.on("disconnect", () => console.warn("⚠️ socket disconnected"));
         }
+
+        document.addEventListener("DOMContentLoaded", () =>
+          lucide.createIcons()
+        );
       </script>
     </body>
   </div>
