--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
   </head>
 
   <div class="wrapper">
+    <video
+      src="final.webm"
+      autoplay
+      loop
+      muted
+      playsinline
+      class="fixed top-4 left-4 w-40 h-24 object-contain pointer-events-none"
+    ></video>
+
     <body>
       <div
         class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
