--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
       class="fixed top-4 left-4 w-40 h-24 object-contain pointer-events-none"
     ></video>
 
+    <video width="600" height="100%" autoplay loop muted playsinline>
+      <source
+        src="https://rotato.netlify.app/alpha-demo/movie-hevc.mov"
+        type='video/mp4; codecs="hvc1"'
+      />
+      <source
+        src="https://rotato.netlify.app/alpha-demo/movie-webm.webm"
+        type="video/webm"
+      />
+    </video>
+
     <body>
       <div
         class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
