--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       loop
       muted
       playsinline
-      class="fixed top-4 left-4 w-40 h-24 object-contain pointer-events-none"
+      class="fixed top-4 left-4 w-40 h-24 object-contain pointer-events-none z-10"
     ></video>
 
     <video width="600" height="100%" autoplay loop muted playsinline>
@@ -85,7 +85,7 @@
 
     <body>
       <div
-        class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
+        class="absolute inset-0 bg-black from-slate-800/20 via-slate-900/10 to-transparent"
       />
 
       <div
