--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       loop
       muted
       playsinline
-      class="fixed top-4 left-4 w-40 h-24 object-contain pointer-events-none z-10"
+      class="fixed top-4 left-0 w-103 h-40 object-contain pointer-events-none z-10"
     ></video>
 
     <video width="600" height="100%" autoplay loop muted playsinline>
@@ -118,22 +118,22 @@
               >
                 <tr>
                   <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                    class="p-2 font-bold text-lg lg:text-2xl uppercase text-center"
                   >
                     Currency
                   </th>
                   <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                    class="p-2 font-bold text-lg lg:text-2xl uppercase text-center"
                   >
                     Buy
                   </th>
                   <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                    class="p-2 font-bold text-lg lg:text-2xl uppercase text-center"
                   >
                     Sell
                   </th>
                   <th
-                    class="p-2 font-bold text-lg lg:text-xl uppercase text-center"
+                    class="p-2 font-bold text-lg lg:text-2xl uppercase text-center"
                   >
                     Notable Price
                   </th>
