--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     loop
     muted
     playsinline
-    class="fixed top-4 left-0 w-200 h-100 object-contain pointer-events-none z-10"
+    class="fixed top-4 left-0 w-[100vh] h-[100vw] transform rotate-90 object-contain pointer-events-none z-10"
   ></video>
+
   <div class="wrapper">
     <video width="600" height="100%" autoplay loop muted playsinline>
       <!-- <source
