--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
           class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
         ></div>
 
-        <video
+        <!-- <video
           src="final.webm"
           autoplay
           loop
           muted
           playsinline
           class="pointer-events-none z-10"
-        ></video>
+        ></video> -->
 
         <h1
           class="text-6xl lg:text-7xl font-bold mb-8 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl relative z-10 text-center"
