--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         Loading…
       </div>
 
+      <img
+        src="logo.png"
+        class="fixed top-4 left-4 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
+      />
+
       <div
         class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-center p-12 w-full h-full relative"
       >
