--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 
     <!-- Image styling + dark background -->
     <style>
-      img {
-        max-width: 4rem;
-        max-height: 4rem;
-      }
       body {
         /* Approximate Tailwind gradient */
         background: linear-gradient(
@@ -85,10 +81,9 @@
       >
         Loading…
       </div>
-
       <img
         src="logo.png"
-        class="fixed top-4 left-4 bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
+        class="fixed w-45 h-40 top-10 left-4 animate-pulse drop-shadow-2xl"
       />
 
       <div
