--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       />
 
       <div
-        class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-center p-12 w-full h-full relative"
+        class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white flex flex-col items-center justify-start mt-[8rem] p-12 w-full h-full relative"
       >
         <div
           class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-slate-800/20 via-slate-900/10 to-transparent"
@@ -269,6 +269,12 @@
           });
         }
       </script>
+
+      <footer
+        class="w-full text-center p-4 text-slate-400 text-sm absolute bottom-0 z-10"
+      >
+        Powered By <span class="text-white font-semibold">Apegres®</span>
+      </footer>
     </body>
   </div>
 </html>
