--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div
         id="branchLabel"
-        class="fixed top-4 right-4 text-white font-bold text-center bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
+        class="fixed top-4 right-4 text-2xl text-white font-bold text-center bg-gradient-to-r from-gray-300 via-gray-400 to-gray-500 bg-clip-text text-transparent animate-pulse drop-shadow-2xl"
       >
         Loading…
       </div>
