changed price to rate

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <th
                     class="p-2 font-bold text-lg lg:text-2xl uppercase text-center"
                   >
-                    Notable Price
+                    Notable RATE
                   </th>
                 </tr>
               </thead>
