made text bigger

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       </script>
 
       <footer
-        class="w-full text-center p-4 text-slate-400 text-sm absolute bottom-0 z-10"
+        class="w-full text-center p-4 text-slate-400 text-sm absolute bottom-0 z-10 text-xl"
       >
         Powered By <span class="text-white font-semibold">Apegres®</span>
       </footer>
