--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       </script>
 
       <footer
-        class="w-full text-center p-4 text-slate-400 text-sm absolute bottom-0 z-10 text-xl"
+        class="w-full text-center p-4 text-slate-400 text-sm absolute bottom-0 z-10 text-2xl"
       >
         Powered By
         <span
