--- a/index.html
+++ b/index.html
@@ -362,6 +362,79 @@
           return urlParams.get('table');
         }
 
+        // Read initial scaling factor (URL param `scale` → localStorage → default 100)
+        let latestTableData = null;
+        let scalingFactor = (function () {
+          const urlParams = new URLSearchParams(window.location.search);
+          const fromUrl = parseFloat(urlParams.get('scale') || '');
+          if (!Number.isNaN(fromUrl) && fromUrl > 0) return Math.round(fromUrl);
+          const fromStorage = parseFloat(localStorage.getItem('scalingFactor') || '');
+          if (!Number.isNaN(fromStorage) && fromStorage > 0) return Math.round(fromStorage);
+          return 100;
+        })();
+
+        function setScalingFactor(next) {
+          const clamped = Math.max(10, Math.min(300, Math.round(next)));
+          scalingFactor = clamped;
+          localStorage.setItem('scalingFactor', String(clamped));
+          const label = document.getElementById('scale-value');
+          const range = document.getElementById('scale-range');
+          if (label) label.textContent = `${clamped}%`;
+          if (range) range.value = String(clamped);
+          if (typeof window._renderTable === 'function' && latestTableData) {
+            window._renderTable(latestTableData);
+          }
+        }
+
+        function initScalingControl() {
+          if (document.getElementById('scaling-control')) return; // already added
+          const ctrl = document.createElement('div');
+          ctrl.id = 'scaling-control';
+          ctrl.style.cssText = [
+            'position:fixed',
+            'top:20px',
+            'left:140px',
+            'z-index:1000',
+            'background:rgba(0,0,0,0.7)',
+            'padding:8px 12px',
+            'border-radius:8px',
+            'display:flex',
+            'align-items:center',
+            'gap:8px',
+            'color:white',
+            'backdrop-filter: blur(4px)'
+          ].join(';');
+
+          ctrl.innerHTML = `
+            <button id="scale-dec" style="background:#1f2937;border:1px solid #334155;color:white;border-radius:6px;padding:4px 8px;cursor:pointer">-</button>
+            <span id="scale-value" style="min-width:52px;text-align:center">${scalingFactor}%</span>
+            <input id="scale-range" type="range" min="10" max="300" step="1" value="${scalingFactor}" style="width:180px">
+            <button id="scale-inc" style="background:#1f2937;border:1px solid #334155;color:white;border-radius:6px;padding:4px 8px;cursor:pointer">+</button>
+            <button id="scale-reset" title="Reset" style="background:#1f2937;border:1px solid #334155;color:white;border-radius:6px;padding:4px 8px;cursor:pointer">100%</button>
+          `;
+
+          document.body.appendChild(ctrl);
+
+          document.getElementById('scale-dec')?.addEventListener('click', () => setScalingFactor(scalingFactor - 1));
+          document.getElementById('scale-inc')?.addEventListener('click', () => setScalingFactor(scalingFactor + 1));
+          document.getElementById('scale-reset')?.addEventListener('click', () => setScalingFactor(100));
+          document.getElementById('scale-range')?.addEventListener('input', (e) => {
+            const target = e.target;
+            const val = parseFloat(target && target.value ? target.value : '');
+            if (!Number.isNaN(val)) setScalingFactor(val);
+          });
+
+          // Keyboard shortcuts: +/- to adjust scaling
+          window.addEventListener('keydown', (e) => {
+            if (e.key === '+' || e.key === '=') setScalingFactor(scalingFactor + 1);
+            if (e.key === '-') setScalingFactor(scalingFactor - 1);
+            if ((e.key === '0' || e.key === 'r' || e.key === 'R') && (e.ctrlKey || e.metaKey)) {
+              e.preventDefault();
+              setScalingFactor(100);
+            }
+          });
+        }
+
         // Get table ID from URL
         const tableId = getTableIdFromUrl();
         
@@ -382,6 +455,7 @@
         function showTableDisplay(tableId) {
           document.getElementById('table-selection').style.display = 'none';
           document.getElementById('table-display').style.display = 'block';
+          initScalingControl();
           loadTableData(tableId);
         }
 
@@ -484,19 +558,28 @@
               td0.appendChild(span);
               tr.appendChild(td0);
 
+              const factor = scalingFactor / 100;
+              const toScaled = (v) => {
+                const num = Number(v);
+                return Number.isFinite(num) ? (num * factor).toFixed(2) : String(v);
+              };
+
               tr.appendChild(
-                createCell(cur.buyRate, "buy text-green-400 font-bold")
+                createCell(toScaled(cur.buyRate), "buy text-green-400 font-bold")
               );
               tr.appendChild(
-                createCell(cur.sellRate, "sell text-yellow-400 font-bold")
+                createCell(toScaled(cur.sellRate), "sell text-yellow-400 font-bold")
               );
               tr.appendChild(
-                createCell(cur.notableRate, "notable text-blue-400 font-bold")
+                createCell(toScaled(cur.notableRate), "notable text-blue-400 font-bold")
               );
 
               tbody.appendChild(tr);
             });
           }
+
+          // expose render for scaling re-renders
+          window._renderTable = render;
 
           fetch(API_URL)
             .then((res) => {
@@ -508,7 +591,8 @@
             .then((table) => {
               if (!table) throw new Error("No data received.");
               currentTableId = table._id;
-              render(table);
+              latestTableData = table;
+              window._renderTable(table);
               initSocket(currentTableId);
             })
             .catch((err) => {
@@ -530,7 +614,10 @@
 
             socket.on("table:update", (data) => {
               console.log("📡 Live update:", data);
-              if (data._id === tableId) render(data);
+              if (data._id === tableId) {
+                latestTableData = data;
+                render(data);
+              }
             });
 
             socket.on("disconnect", () => {
